Fix slabout and clabout

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="tab-content">
           <!--home section-->
-          <section id="home" class="tab-pane fade show active full-section bgipad" role="tabpanel">
+          <section id="home">
             <div id="descbox-about">
               <div class="description">
                 <p>
