--- a/slabout.html
+++ b/slabout.html
@@ -110,22 +110,56 @@
         </header>
 
 
-        <div class="tab-content">
+        <div class="content">
 
           <!--student level section-->
           <!-- about section -->
-          <section id="slabout" class="tab-pane fade show active full-section bgipad" role="tabpanel">
+          <section id="slabout">
             <div class="text-center" id="descbox-about">
               <div class="text-coming-soon">STUDENT<br>LEVEL</div>
               <div class="description">
                 <p>
-                  Business and IT Olympiad on Information System Expo adalah bagian dari serangkaian acara ISE! dengan konsep olimpiade dan kompetisi tingkat nasional yang ditujukan bagi pelajar SMA/SMK/sederajat dan mahasiswa. Bionix ISE! 2021 hadir dengan konsep daring penuh yang memadukan teori dan implementasi dari manajemen, bisnis, dan teknologi informasi.
-
+                  Bionix Student Level merupakan olimpiade tingkat nasional yang berfokus pada konsep bisnis dan teknologi informasi untuk tingkat pelajar SMA/SMK/sederajat di Indonesia. Bionix Student Level dilaksanakan melalui empat tahapan kompetisi dengan konsep acara daring penuh.
                 </p>
               </div>
-            </div>
-            <div id="timeline-img">
-              <img src="/img/tahapan-persyaratan-student-level.png" class="img-fluid" style="margin-bottom: 18rem;"/>
+              <div id="tahapan-student-level">
+                <h1>TAHAPAN</h1>
+                <br><br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN REGION</h2>
+                <p>
+                  Penyisihan region merupakan tahap pertama yang harus dilalui setiap peserta. Pada tahap ini, peserta akan berkompetisi melawan tim lain yang berada dalam satu region yang sama. Peserta akan mengerjakan soal pilihan ganda berdasarkan lima bidang keilmuan sistem informasi dengan jumlah 100 soal
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN NASIONAL</h2>
+                <p>
+                  Penyisihan nasional merupakan tahap kedua yang harus dilalui setiap peserta. Pada tahap ini, peserta akan berkompetisi melawan tim lain dari seluruh Indonesia. Peserta akan mengerjakan soal pilihan ganda berdasarkan lima bidang keilmuan sistem informasi dengan jumlah 100 soal
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> SEMIFINAL</h2>
+                <p>
+                  Semifinal merupakan tahap ketiga yang harus dilalui setiap peserta. Pada tahap ini, peserta akan membuat sebuah ide bisnis berdasarkan tema yang telah ditentukan dan menuangkannya dalam bentuk proposal dan video
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> FINAL</h2>
+                <p>
+                  Final merupakan tahap terakhir yang harus dilalui setiap peserta. Pada tahap ini, peserta akan mempresentasikan ide bisnis yang telah dibuat sebelumnya di hadapan juri yang kompeten di bidang bisnis dan teknologi informasi
+                </p>
+              </div>
+              <div id="persyaratan-student-level">
+                <br>
+                <h1>PERSYARATAN</h1>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 1</h2>
+                <p>
+                  Membentuk tim dengan anggota sebanyak dua orang
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 2</h2>
+                <p>
+                  Tim boleh terdiri atas siswa lintas kelas atau lintas angkatan, tetapi harus berasal dari sekolah yang sama
+                </p>
+              </div>
+              <div class="space"></div>
             </div>
           </section>
           
