--- a/sltimeline.html
+++ b/sltimeline.html
@@ -120,7 +120,7 @@
           <section id="sltimeline" class="tab-pane fade show active full-section bgipad" role="tabpanel">
             <div class="container" id="timeline-img">
               <div class="text-center text-coming-soon">STUDENT<br>LEVEL</div>
-              <img src="/img/timeline-student-level.png" class="img-fluid" style="margin: 200px 0;"/>
+              <img src="/img/timeline-student-level.png" class="img-fluid" style="margin: 20% 0;"/>
             </div>
           </section>
 
