--- a/clabout.html
+++ b/clabout.html
@@ -124,9 +124,44 @@
 
                 </p>
               </div>
-              <div class="container">
-                <img src="/img/tahapan-persyaratan-college-level.png" class="img-fluid" />
+              <div id="tahapan-student-level">
+                <h1>TAHAPAN</h1>
+                <br><br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN REGION</h2>
+                <p>
+                  Penyisihan region merupakan tahap pertama yang harus dilalui setiap peserta. Pada tahap ini, peserta akan berkompetisi melawan tim lain yang berada dalam satu region yang sama. Peserta akan mengerjakan soal pilihan ganda berdasarkan lima bidang keilmuan sistem informasi dengan jumlah 100 soal
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN NASIONAL</h2>
+                <p>
+                  Penyisihan nasional merupakan tahap kedua yang harus dilalui setiap peserta. Pada tahap ini, peserta akan berkompetisi melawan tim lain dari seluruh Indonesia. Peserta akan mengerjakan soal pilihan ganda berdasarkan lima bidang keilmuan sistem informasi dengan jumlah 100 soal
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> SEMIFINAL</h2>
+                <p>
+                  Semifinal merupakan tahap ketiga yang harus dilalui setiap peserta. Pada tahap ini, peserta akan membuat sebuah ide bisnis berdasarkan tema yang telah ditentukan dan menuangkannya dalam bentuk proposal dan video
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> FINAL</h2>
+                <p>
+                  Final merupakan tahap terakhir yang harus dilalui setiap peserta. Pada tahap ini, peserta akan mempresentasikan ide bisnis yang telah dibuat sebelumnya di hadapan juri yang kompeten di bidang bisnis dan teknologi informasi
+                </p>
               </div>
+              <div id="persyaratan-student-level">
+                <br>
+                <h1>PERSYARATAN</h1>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 1</h2>
+                <p>
+                  Membentuk tim dengan anggota sebanyak dua orang
+                </p>
+                <br>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 2</h2>
+                <p>
+                  Tim boleh terdiri atas siswa lintas kelas atau lintas angkatan, tetapi harus berasal dari sekolah yang sama
+                </p>
+              </div>
+              <div class="space"></div>
             </div>
             <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
           </section>
