--- a/cltimeline.html
+++ b/cltimeline.html
@@ -118,7 +118,7 @@
           <section id="cltimeline" class="tab-pane fade show active full-section bgipad" role="tabpanel">
             <div class="container">
               <div class="text-center text-coming-soon">COLLEGE<br>LEVEL</div>
-              <img src="/img/timeline-college-level.png" class="img-fluid" style="margin-top: 200px;" />
+              <img src="/img/timeline-college-level.png" class="img-fluid" style="margin-top: 20%;" />
             </div>
             <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
           </section>
