--- a/clabout.html
+++ b/clabout.html
@@ -127,24 +127,19 @@
               <div id="tahapan-student-level">
                 <h1>TAHAPAN</h1>
                 <br><br>
-                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN REGION</h2>
+                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN</h2>
                 <p>
-                  Penyisihan region merupakan tahap pertama yang harus dilalui setiap peserta. Pada tahap ini, peserta akan berkompetisi melawan tim lain yang berada dalam satu region yang sama. Peserta akan mengerjakan soal pilihan ganda berdasarkan lima bidang keilmuan sistem informasi dengan jumlah 100 soal
-                </p>
-                <br>
-                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN NASIONAL</h2>
-                <p>
-                  Penyisihan nasional merupakan tahap kedua yang harus dilalui setiap peserta. Pada tahap ini, peserta akan berkompetisi melawan tim lain dari seluruh Indonesia. Peserta akan mengerjakan soal pilihan ganda berdasarkan lima bidang keilmuan sistem informasi dengan jumlah 100 soal
+                  Penyisihan merupakan tahap pertama yang harus dilalui setiap peserta. Pada tahap ini, peserta membuat implementasi bisnis dan teknologi informasi dari studi kasus perusahaan yang telah diberikan dan menuangkannya dalam bentuk paper
                 </p>
                 <br>
                 <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> SEMIFINAL</h2>
                 <p>
-                  Semifinal merupakan tahap ketiga yang harus dilalui setiap peserta. Pada tahap ini, peserta akan membuat sebuah ide bisnis berdasarkan tema yang telah ditentukan dan menuangkannya dalam bentuk proposal dan video
+                  Semifinal merupakan tahap kedua yang harus dilalui setiap peserta. Pada tahap ini, peserta membuat implementasi bisnis dan teknologi informasi dari studi kasus perusahaan yang telah diberikan dan menuangkannya dalam bentuk paper dan video
                 </p>
                 <br>
                 <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> FINAL</h2>
                 <p>
-                  Final merupakan tahap terakhir yang harus dilalui setiap peserta. Pada tahap ini, peserta akan mempresentasikan ide bisnis yang telah dibuat sebelumnya di hadapan juri yang kompeten di bidang bisnis dan teknologi informasi
+                  Final merupakan tahap terakhir yang harus dilalui setiap peserta. Pada tahap ini, peserta akan mempresentasikan penyelesaian studi kasus bisnis yang telah dibuat sebelumnya di hadapan juri yang kompeten di bidang bisnis dan teknologi informasi
                 </p>
               </div>
               <div id="persyaratan-student-level">
@@ -158,7 +153,7 @@
                 <br>
                 <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 2</h2>
                 <p>
-                  Tim boleh terdiri atas siswa lintas kelas atau lintas angkatan, tetapi harus berasal dari sekolah yang sama
+                  Tim boleh terdiri atas siswa lintas kelas atau lintas angkatan, tetapi harus berasal dari kampus yang sama
                 </p>
               </div>
               <div class="space"></div>
