--- a/slbenefit.html
+++ b/slbenefit.html
@@ -115,11 +115,33 @@
 
           <!--student level section-->
           <!-- benefit section -->
-          <section id="slbenefit" class="tab-pane fade show active full-section bgipad" role="tabpanel">
-              <div class="container">
+          <section id="slbenefit">
+           <div class="content" style="margin-left: 8%;margin-right: 10%;">
                 <div class="text-center text-coming-soon">STUDENT<br>LEVEL</div>
-                <img src="/img/benefit-student-level.svg" alt="" class="img-fluid" style="margin-top: 15rem;">
-              </div>
+                <div id="fasilitas-student-level">
+                  <h1>FASILITAS</h1>
+                  <br><br>
+                  <p>
+                    <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                    Sertifikat digital untuk semua peserta yang telah diverifikasi identitasnya
+                  </p>
+                  <br>
+                  <p>
+                    <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                    Simulasi pengerjaan soal penyisihan (untuk waktu tertentu) dan pembahasannya sebanyak dua kali untuk semua peserta (khusus Bionix Student Level)
+                  </p>
+                  <br>
+                  <p>
+                    <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                    Pelatihan pembuatan ide bisnis berbasis teknologi informasi bersama dengan pemateri yang kompeten pada bidang bisnis (khusus Bionix Student Level)
+                  </p>
+                  
+                </div>
+                <div id="hadiah-student-level">
+                  <h1>FASILITAS</h1>
+                  <img src="/img/benefit-student-level.png" alt="" class="img-fluid" style="margin-bottom: 20%;margin-left: 19%;">
+                </div>
+            </div>
           </section>
 
         
