--- a/slbenefit.html
+++ b/slbenefit.html
@@ -139,7 +139,7 @@
                 </div>
                 <div id="hadiah-student-level">
                   <h1>FASILITAS</h1>
-                  <img src="/img/benefit-student-level.png" alt="" class="img-fluid" style="margin-bottom: 20%;margin-left: 19%;">
+                  <img src="/img/benefit-student-level.png" alt="" class="img-fluid" style="margin-bottom: 20%;margin-left: 19%;width: 50vw;">
                 </div>
             </div>
           </section>
