--- a/slbenefit.html
+++ b/slbenefit.html
@@ -122,17 +122,17 @@
                   <h1>FASILITAS</h1>
                   <br><br>
                   <p>
-                    <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                    <i class="fa fa-caret-right" aria-hidden="true"></i> 
                     Sertifikat digital untuk semua peserta yang telah diverifikasi identitasnya
                   </p>
                   <br>
                   <p>
-                    <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                    <i class="fa fa-caret-right" aria-hidden="true"></i> 
                     Simulasi pengerjaan soal penyisihan (untuk waktu tertentu) dan pembahasannya sebanyak dua kali untuk semua peserta (khusus Bionix Student Level)
                   </p>
                   <br>
                   <p>
-                    <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                    <i class="fa fa-caret-right" aria-hidden="true"></i> 
                     Pelatihan pembuatan ide bisnis berbasis teknologi informasi bersama dengan pemateri yang kompeten pada bidang bisnis (khusus Bionix Student Level)
                   </p>
                   
