fix clbenefit text-coming-soon

--- a/clbenefit.html
+++ b/clbenefit.html
@@ -118,7 +118,7 @@
           <!-- benefit section -->
           <section id="clbenefit">
             <div class="content" style="margin-left: 8%;margin-right: 10%;">
-              <div class="text-center text-coming-soon">STUDENT<br>LEVEL</div>
+              <div class="text-center text-coming-soon">COLLEGE<br>LEVEL</div>
               <div id="fasilitas-student-level">
                 <h1>FASILITAS</h1>
                 <br><br>
