fix navbar and charet icon

--- a/clabout.html
+++ b/clabout.html
@@ -72,7 +72,7 @@
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-chevron-right"></i></button> -->
                   <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
+                  <a class="dropdown-item active" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
                 </li>
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-chevron-right"></i></button> -->
@@ -127,17 +127,17 @@
               <div id="tahapan-student-level">
                 <h1>TAHAPAN</h1>
                 <br><br>
-                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> PENYISIHAN</h2>
+                <h2><i class="fa fa-caret-right" aria-hidden="true"></i> PENYISIHAN</h2>
                 <p>
                   Penyisihan merupakan tahap pertama yang harus dilalui setiap peserta. Pada tahap ini, peserta membuat implementasi bisnis dan teknologi informasi dari studi kasus perusahaan yang telah diberikan dan menuangkannya dalam bentuk paper
                 </p>
                 <br>
-                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> SEMIFINAL</h2>
+                <h2><i class="fa fa-caret-right" aria-hidden="true"></i> SEMIFINAL</h2>
                 <p>
                   Semifinal merupakan tahap kedua yang harus dilalui setiap peserta. Pada tahap ini, peserta membuat implementasi bisnis dan teknologi informasi dari studi kasus perusahaan yang telah diberikan dan menuangkannya dalam bentuk paper dan video
                 </p>
                 <br>
-                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> FINAL</h2>
+                <h2><i class="fa fa-caret-right" aria-hidden="true"></i> FINAL</h2>
                 <p>
                   Final merupakan tahap terakhir yang harus dilalui setiap peserta. Pada tahap ini, peserta akan mempresentasikan penyelesaian studi kasus bisnis yang telah dibuat sebelumnya di hadapan juri yang kompeten di bidang bisnis dan teknologi informasi
                 </p>
@@ -146,12 +146,12 @@
                 <br>
                 <h1>PERSYARATAN</h1>
                 <br>
-                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 1</h2>
+                <h2><i class="fa fa-caret-right" aria-hidden="true"></i> 1</h2>
                 <p>
                   Membentuk tim dengan anggota sebanyak dua orang
                 </p>
                 <br>
-                <h2><i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 2</h2>
+                <h2><i class="fa fa-caret-right" aria-hidden="true"></i> 2</h2>
                 <p>
                   Tim boleh terdiri atas siswa lintas kelas atau lintas angkatan, tetapi harus berasal dari kampus yang sama
                 </p>
