--- a/clbenefit.html
+++ b/clbenefit.html
@@ -72,7 +72,7 @@
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-chevron-right"></i></button> -->
                   <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
+                  <a class="dropdown-item active" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
                 </li>
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-chevron-right"></i></button> -->
