Update clbenefit and slbenefit

--- a/clbenefit.html
+++ b/clbenefit.html
@@ -72,12 +72,12 @@
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-chevron-right"></i></button> -->
                   <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item active" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
+                  <a class="dropdown-item" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
                 </li>
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-chevron-right"></i></button> -->
                   <!-- <a class="dropdown-item" href="#clbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="clbenefit.html">Benefit<i class="fas fa-chevron-right"></i></a>
+                  <a class="dropdown-item active" href="clbenefit.html">Benefit<i class="fas fa-chevron-right"></i></a>
                 </li>
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#cltimeline " type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-chevron-right"></i></button> -->
@@ -123,23 +123,23 @@
                 <h1>FASILITAS</h1>
                 <br><br>
                 <p>
-                  <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                  <i class="fa fa-caret-right" aria-hidden="true"></i> 
                   Sertifikat digital untuk semua peserta yang telah diverifikasi identitasnya
                 </p>
                 <br>
                 <p>
-                  <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                  <i class="fa fa-caret-right" aria-hidden="true"></i> 
                   Simulasi pengerjaan soal penyisihan (untuk waktu tertentu) dan pembahasannya sebanyak dua kali untuk semua peserta (khusus Bionix Student Level)
                 </p>
                 <br>
                 <p>
-                  <i class="fa fa-caret-right" aria-hidden="true" style="font-size:3vw;"></i> 
+                  <i class="fa fa-caret-right" aria-hidden="true"></i> 
                   Pelatihan pembuatan ide bisnis berbasis teknologi informasi bersama dengan pemateri yang kompeten pada bidang bisnis (khusus Bionix Student Level)
                 </p>
                 
               </div>
               <div id="hadiah-student-level">
-                <h1>FASILITAS</h1>
+                <h1>HADIAH</h1>
                 <img src="/img/benefit-college-level.png" alt="" class="img-fluid" style="margin-bottom: 20%;margin-left: 25%;width: 40vw;">
               </div>
               </div>
