--- a/cltimeline.html
+++ b/cltimeline.html
@@ -61,7 +61,7 @@
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#sltimeline" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-chevron-right"></i></button> -->
                   <!-- <a class="dropdown-item" href="#sltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item active" href="sltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
+                  <a class="dropdown-item" href="sltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
                 </li>
                 </ul>
             </li>
@@ -82,7 +82,7 @@
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#cltimeline " type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-chevron-right"></i></button> -->
                   <!-- <a class="dropdown-item" href="#cltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="cltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
+                  <a class="dropdown-item active" href="cltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
                 </li>
                 </ul>
             </li>
