--- a/clabout.html
+++ b/clabout.html
@@ -158,7 +158,7 @@
               </div>
               <div class="space"></div>
             </div>
-            <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
+            <img src="/img/landscape-planet.png"/>
           </section>
           
           
