--- a/clbenefit.html
+++ b/clbenefit.html
@@ -143,7 +143,7 @@
                 <img src="/img/benefit-college-level.png" alt="" class="img-fluid" style="margin-bottom: 20%;margin-left: 25%;width: 40vw;">
               </div>
               </div>
-            <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
+            <img src="/img/landscape-planet.png"/>
           </section>
           
           
