--- a/cltimeline.html
+++ b/cltimeline.html
@@ -120,7 +120,7 @@
               <div class="text-center text-coming-soon">COLLEGE<br>LEVEL</div>
               <img src="/img/timeline-college-level.png" class="img-fluid" style="margin-top: 20%;" />
             </div>
-            <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
+            <img src="/img/landscape-planet.png"/>
           </section>
 
 
